--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.1",
     "torch>=2.6.0",
+    "torchvision>=0.21.0",
 ]
 
 [tool.ruff]
@@ -39,5 +40,5 @@ exclude = [
     "venv",
 ]
 
-line-length = 150
+line-length = 120
 indent-width = 4
