--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "tensorboard>=2.19.0",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
+    "typer>=0.15.2",
 ]
 
 [tool.ruff]
